--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: Release
 
 on:
   push:
-    tags:
-      - 'v*'
+  #  tags:
+  #    - 'v*'
 
 jobs:
   build:
@@ -49,10 +49,10 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: master
+        release_name: master
         draft: false
-        prerelease: false
+        prerelease: true
         
     - name: Upload Release Asset
       uses: actions/github-script@v2
