--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -40,4 +40,4 @@ jobs:
           #tags: ${{ steps.meta.outputs.tags }}
           tags: v0.15-bri
           labels: ${{ steps.meta.outputs.labels }}
-          file: {context}/Dockerfile.gortr
+          file: ./Dockerfile.gortr
